Game-dev started
Huge update, a lot of work done. Button drivers added. Makefiled modified. Game logic finished.--- Further work includes: Finishing further debug and polish.

--- a/Code/Makefile
+++ b/Code/Makefile
@@ -18,9 +18,8 @@ SUBDIRS := $(KPATH)
 ##
 SRC :=                                  \
 main.cpp								\
-LED.cpp								    \
-ADC-driver.cpp
-
+ADC-driver.cpp					        \
+Button.cpp							   
 ##
 ## List here additional static libraries with relative path
 ##
